# blog-source

./: .gitignore  LICENSE  Main.hs  README.md  blog-source.cabal  hakyll.hs  stack.yaml
assets/: counterexamples.css  counterexamples.js  default.css  gaq.js  juggling.css  juggling.min.js
css/: default.css
posts/: 2010-12-04-Existential-Types.markdown  2010-12-04-Least-Fixed-Points.markdown  2010-12-05-Greatest-Fixed-Points.markdown  2010-12-06-Conaturals.markdown  2010-12-10-Histomorphisms.markdown  2010-12-15-Balanced-Trees.markdown  2011-01-03-Probability-Distributions.markdown  2011-01-27-A-Lemma-On-Fixed-Points.markdown  2011-01-27-Typed-Format-Strings.markdown  2011-02-02-Typed-String-Parsing.markdown  2011-02-03-Decorating-Recursive-Types.markdown  2011-02-16-Mutually-Recursive-Types.markdown  2011-02-17-Ins-And-Outs.markdown  2011-05-01-Abstraction-Elimination-In-Purity.markdown  2011-05-02-Typechecking-A-Purity-Program.markdown  2011-12-28-Enumerating-Permutations.markdown  2012-02-02-Polykinded-Folds.markdown  2012-02-06-Solving-Constraints-Generically.markdown  2012-02-12-Doubly-Recursive-Functions-Generically.markdown  2012-02-12-Typing-Linear-Lambda-Terms.markdown  2012-02-19-What-If-Haskell-Had-Equalizers.markdown  2012-02-21-Abstraction-Elimination-For-Linear-Lambda-Terms.markdown  2012-04-29-Haskell-On-Azure.markdown  2012-06-17-Generalizing-Snoc.markdown  2012-07-22-What-Makes-The-Free-Monad-Free.markdown  2012-08-04-Testing-Random-Properties-With-Type-Classes.markdown  2012-12-21-One-Hole-Contexts-Generalize-Diff-To-Containers.markdown  2013-05-18-Typed-Markup-Language - Copy.markdown  2013-05-18-Typed-Markup-Language.markdown  (+24 more)
(+5 files in other folders)
