name:                blog-source
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog-source
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, 
                       filepath >=1.3 && <1.4, 
                       process >=1.2 && <1.3, 
                       old-time >=1.1 && <1.2, 
                       directory >=1.2 && <1.3,
                       cheapskate >= 0.1 && < 0.2,
                       split >= 0.2.2 && < 0.3,
                       blaze-html >= 0.7.1 && < 0.8
  default-language:    Haskell2010
