name:                blog-source
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog-source
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.9,
                       filepath -any,
                       process -any,
                       old-time -any,
                       directory -any,
                       cheapskate,
                       split,
                       blaze-html
  default-language:    Haskell2010
